# e2e-mobile

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  lint.yml  milestone-creation.yml
docs/: _static  conf.py  faq.rst  index.rst
docs/_templates/apidoc/: package.rst_t
docs/api/: reference.rst
docs/getting_started/: customization.rst  examples.rst  index.rst  inspecting_elements.rst  installation.rst  quick_start.rst  resources.rst  simulations.rst  troubleshooting.rst  ui_assertions.rst  ui_assertions_actions.rst  writing_your_first_test.rst
docs/usage/: index.rst
e2e_ext/: _typing.py
e2e_ext/core/: screen.py
e2e_ext/screens/: example.py  home.py  login.py  settings.py
e2e_ext/simulations/: example.py
scripts/: build_wikipedia_ios.sh
src/e2e/: __init__.py  _typing.py  cli.py  screens.py  simulations.py  tester.py
src/e2e/_cli/: demo.py  init.py  new.py  template.py
src/e2e/_templates/e2e_ext/: _typing.py.template
src/e2e/_templates/e2e_ext/core/: __init__.py.template  simulation.py.template  tester.py.template
src/e2e/_templates/e2e_ext/screens/: example.py.template
src/e2e/_templates/e2e_ext/simulations/: example.py.template
src/e2e/_templates/new/: screen.py.template  simulation.py.template
src/e2e/_templates/tests/: conftest.py.template  test_example.py.template
src/e2e/_templates/tests/e2e/: conftest.py.template  test_example.py.template
src/e2e/core/: __init__.py  config.py  env.py  logger.py  screen.py  simulation.py  tester.py
src/e2e/core/appium/: config.py
src/e2e/core/mixin/: logger.py  ui.py
src/e2e/core/mixin/ui/: __init__.py  base.py  wd.py
src/e2e/core/ui/: __init__.py  base.py  button.py  textfield.py
src/e2e/core/utils/: __init__.py  app.py  caps.py  failable.py  meta.py  module.py  wd.py
src/e2e/fixtures/: __init__.py  artifacts.py  cleanup.py  core.py  diagnostic.py  page_source.py  recording.py  screenshot.py  simulator.py  tester.py
src/e2e/mixin/: dynamic.py
src/e2e/pytest_plugins/: __init__.py  appium_service.py  artifacts.py  base.py  cleanup.py  core.py  diagnostic.py  diagnostics.py  log.py  parallel.py  report.py  simulator.py  tester.py  wd.py
src/e2e/screens/: __init__.py
src/e2e/simulations/: __init__.py  location_update.py  push_notification.py
tests/: conftest.py  test_example.py
tests/e2e/: conftest.py  test_example.py  test_settings.py
tests/unit/: test_example.py  test_unit_example.py
