[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e2e-mobile"
dynamic = ["version"]
description = "E2E Testing package for mobile apps"
readme = "README.rst"
authors = [{ name = "Thuyen Trinh", email = "trinhngocthuyen@gmail.com" }]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
keywords = ["ci", "cd", "ci/cd", "mobile", "ios"]
dependencies = [
    "retry",
    "Appium-Python-Client",
    "pytest",
    "pytest-xdist",
    "click",
    "seeeye>=0.0.5",
]
requires-python = ">=3.10"

[project.scripts]
e2e = 'e2e.cli:main'

[project.optional-dependencies]
dev = [
    "setuptools>=61.0.0",
    "pip-tools",
    "black",
    "autoflake",
    "isort",
    "pre-commit",
    "bumpver",
    "twine",
    "pytest",
    "pytest-cov",
    "pytest-html",
    "sphinx_rtd_theme",
]

[project.urls]
Homepage = "https://github.com/trinhngocthuyen/e2e-mobile"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.pytest.ini_options]
addopts = "-s -v --cov=. --cov-report=xml --log-file=.artifacts/latest/pytest.log --html=.artifacts/latest/report.html"
